amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Interface it's not
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Scalar it's not
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Union it's not
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 
